--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-qrcode
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DDD QR Code</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+  <div class="container">
+    <header>
+      <img src="./img/hero.jpeg" alt="" style="width: 100%">
+    </header>
+
+    <main>
+      <ul>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBtOGRhKHMm_v27BbASFk-kEj2nTx12s9K7i1lQTDrt7FfDQ/viewform" target="_self">DDD Incident Report</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSecifNs8rgKYQI9j-KntKnR6kw3xbYbjilkGsHIPgoVetuJTw/viewform" target="_self">Deep Dive Dubai - Sharing box</a></li>
+      </ul>
+    </main>
+
+    <footer>
+      <p>Deep Dive Dubai</p>
+    </footer>
+  </div>
+</body>
+</html>
