Add, cleaning sessions guideline link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBtOGRhKHMm_v27BbASFk-kEj2nTx12s9K7i1lQTDrt7FfDQ/viewform" target="_self">DDD Incident Report</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSecifNs8rgKYQI9j-KntKnR6kw3xbYbjilkGsHIPgoVetuJTw/viewform" target="_self">Deep Dive Dubai - Sharing box</a></li>
         <li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=ndD7GeOwlEaYozouBU1q-u0UKebEBiVDnP7SStdPlMxUOTZSTExJT1NMNFVSSjlWTUo2R0lDNDcwUC4u" target="_self">Deep Dive Dubai - Cleaning Sessions Form</a></li>
+        <li><a href="https://deepdivedubai.github.io/CleaningSessionsGuideline/" target="_self">Deep Dive Dubai - Cleaning Sessions Guideline</a></li>
       </ul>
     </main>
 
